# powermgr_battery_statistics

./: README.md  README_zh.md  batterystats.gni  batterystats.yaml  bundle.json  ohos.build
frameworks/ets/taihe/battery_stats/: BUILD.gn
frameworks/ets/taihe/battery_stats/idl/: ohos.batteryStatistics.taihe
frameworks/ets/taihe/battery_stats/src/: ani_constructor.cpp  ohos.batteryStatistics.impl.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: async_callback_info.h  battery_stats.h  napi_error.h
frameworks/js/napi/src/: async_callback_info.cpp  battery_stats.cpp  battery_stats_module.cpp  napi_error.cpp  napi_utils.cpp
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: battery_stats_client.h  battery_stats_errors.h  battery_stats_info.h  battery_stats_utils.h  ibattery_stats.h
services/: BUILD.gn  IBatteryStats.idl
services/native/include/: battery_stats_core.h  battery_stats_detector.h  battery_stats_dumper.h  battery_stats_entity.h  battery_stats_listener.h  battery_stats_parser.h  battery_stats_service.h  battery_stats_subscriber.h  bluetooth_entity.h  cpu_time_reader.h  idle_entity.h  phone_entity.h  radio_entity.h  screen_entity.h  time_helper.h  uid_entity.h  user_entity.h  wifi_entity.h
services/native/include/entities/: alarm_entity.h  audio_entity.h  battery_stats_entity.h  bluetooth_entity.h  camera_entity.h  cpu_entity.h  flashlight_entity.h  gnss_entity.h  gps_entity.h  idle_entity.h  phone_entity.h  radio_entity.h  screen_entity.h  sensor_entity.h  uid_entity.h  user_entity.h  wakelock_entity.h  wifi_entity.h
services/native/src/: battery_stats_core.cpp  battery_stats_detector.cpp  battery_stats_dumper.cpp  battery_stats_entity.cpp  battery_stats_listener.cpp  battery_stats_parser.cpp  battery_stats_service.cpp  battery_stats_subscriber.cpp  bluetooth_entity.cpp  cpu_time_reader.cpp  idle_entity.cpp  phone_entity.cpp  radio_entity.cpp  screen_entity.cpp  time_helper.cpp  uid_entity.cpp  user_entity.cpp  wifi_entity.cpp
services/native/src/entities/: alarm_entity.cpp  audio_entity.cpp  battery_stats_entity.cpp  bluetooth_entity.cpp  camera_entity.cpp  cpu_entity.cpp  flashlight_entity.cpp  gnss_entity.cpp  gps_entity.cpp  idle_entity.cpp  phone_entity.cpp  radio_entity.cpp  screen_entity.cpp  sensor_entity.cpp  uid_entity.cpp  user_entity.cpp  wakelock_entity.cpp  wifi_entity.cpp
services/native/test/: BUILD.gn
services/native/test/unittest/: BUILD.gn
services/native/test/unittest/include/: battery_stats_client_test.h  battery_stats_service_test.h  stats_alarm_test.h  stats_audio_test.h  stats_bluetooth_test.h  stats_camera_test.h  stats_client_test.h  stats_display_test.h  stats_dump_test.h  stats_location_test.h  stats_phone_test.h  stats_powermgr_test.h  stats_service_test.h  stats_test.h  stats_wifi_test.h
services/native/test/unittest/src/: battery_stats_client_test.cpp  battery_stats_service_test.cpp  stats_alarm_test.cpp  stats_audio_test.cpp  stats_bluetooth_test.cpp  stats_camera_test.cpp  stats_communication_test.cpp  stats_display_test.cpp  stats_dump_test.cpp  stats_location_test.cpp  stats_phone_test.cpp  stats_powermgr_test.cpp  stats_service_death_test.cpp  stats_service_test.cpp  stats_util_test.cpp  stats_wifi_test.cpp
services/profile/: BUILD.gn  power_average.json
services/zidl/include/: battery_stats_proxy.h  battery_stats_stub.h
services/zidl/src/: battery_stats_proxy.cpp  battery_stats_stub.cpp
test/: BUILD.gn
test/fuzztest/configparser_fuzzer/: BUILD.gn  configparser_fuzzer_test.cpp  project.xml
test/fuzztest/configparser_fuzzer/corpus/: malformed.json  valid_config.json
test/fuzztest/dump_fuzzer/: BUILD.gn  dump_fuzzer.cpp
test/fuzztest/dump_fuzzer/corpus/: init
test/fuzztest/getcount_fuzzer/: BUILD.gn  getcount_fuzzer.cpp  getcount_fuzzer.h
test/fuzztest/getcount_fuzzer/corpus/: init
test/fuzztest/getpartstatsmah_fuzzer/: BUILD.gn  getpartstatsmah_fuzzer_test.cpp
test/fuzztest/napi_fuzzer/: BUILD.gn  napi_fuzzer_test.cpp  project.xml
test/fuzztest/napi_fuzzer/corpus/: init
test/fuzztest/statsutils_fuzzer/: BUILD.gn  project.xml  statsutils_fuzzer.cpp  statsutils_fuzzer.h
test/systemtest/: BUILD.gn
test/systemtest/include/: battery_statistics_test.h  batterystats_sys_test.h
test/systemtest/src/: batterystats_sys_test.cpp
test/unittest/src/clienttest/: BUILD.gn  stats_alarm_test.cpp  stats_audio_test.cpp  stats_bluetooth_test.cpp  stats_camera_test.cpp  stats_display_test.cpp  stats_dump_test.cpp  stats_location_test.cpp  stats_phone_test.cpp  stats_powermgr_test.cpp  stats_service_death_test.cpp  stats_service_test.cpp  stats_service_thread_test.cpp  stats_util_test.cpp  stats_wifi_test.cpp
test/unittest/src/clienttest/mock/: stats_client_test_mock_object.cpp  stats_client_test_mock_parcel.cpp  stats_client_test_mock_peer.cpp
test/unittest/src/servicetest/: BUILD.gn  stats_service_alarm_test.cpp  stats_service_audio_test.cpp  stats_service_bluetooth_test.cpp  stats_service_camera_test.cpp  stats_service_config_parse_test.cpp  stats_service_config_parse_test_three.cpp  stats_service_config_parse_test_two.cpp  stats_service_core_test.cpp  stats_service_display_test.cpp  stats_service_dump_test.cpp  stats_service_location_test.cpp  stats_service_phone_test.cpp  stats_service_powermgr_test.cpp  stats_service_stub_test.cpp  stats_service_subscriber_test.cpp  stats_service_wifi_test.cpp
test/unittest/src/servicetest/mock/: stats_service_test_mock_parcel.cpp
test/unittest/src/servicetest/utils/: hisysevent_operation.cpp  stats_service_test_proxy.cpp  string_filter.cpp
utils/: BUILD.gn
utils/dump/: BUILD.gn
utils/dump/include/: statistics_shell_command.h
utils/dump/src/: main.cpp  statistics_shell_command.cpp
utils/native/include/: delayed_stats_sp_singleton.h  stats_cjson_utils.h  stats_common.h  stats_errors.h  stats_helper.h  stats_hilog_wrapper.h  stats_hisysevent.h  stats_log.h  stats_sp_singleton.h  stats_types.h  stats_utils.h  stats_xcollie.h
utils/native/src/: stats_helper.cpp  stats_hisysevent.cpp  stats_utils.cpp  stats_xcollie.cpp
(+201 files in other folders)
