# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

aafwk_services_path = "//foundation/aafwk/standard/services"
aafwk_kits_path = "//foundation/aafwk/standard/frameworks/kits"
batterystats_part_name = "battery_statistics_native"
batterystats_root_path = "//base/powermgr/battery_statistics"
batterystats_interfaces_path = "${batterystats_root_path}/interfaces"
batterystats_frameworks_path = "${batterystats_root_path}/frameworks"
batterystats_service_path = "${batterystats_root_path}/services"
batterystats_utils_path = "${batterystats_root_path}/utils"
