# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")

config("batterystats_utils_config") {
  include_dirs = [
    "native/include",
    "//commonlibrary/c_utils/base/include",
    "${batterystats_innerkits}/include",
  ]
}

ohos_source_set("batterystats_utils") {
  sources = [
    "native/src/stats_helper.cpp",
    "native/src/stats_hisysevent.cpp",
    "native/src/stats_utils.cpp",
  ]

  public_configs = [ ":batterystats_utils_config" ]
  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  part_name = "${batterystats_part_name}"
}
