# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")

config("batterystats_public_config") {
  include_dirs = [
    "include",
    "${batterystats_service_path}/zidl/include",
  ]
}

ohos_shared_library("batterystats_client") {
  sources = [
    "${batterystats_frameworks_path}/native/src/battery_stats_client.cpp",
    "${batterystats_frameworks_path}/native/src/battery_stats_info.cpp",
    "${batterystats_service_path}/zidl/src/battery_stats_proxy.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":batterystats_public_config",
  ]

  public_configs = [ ":batterystats_public_config" ]

  deps = [ "${batterystats_utils_path}:batterystats_utils" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  part_name = "${batterystats_part_name}"
}
