# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")
import("//build/test.gni")

module_output_path = "${batterystats_part_name}/batterystats"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${batterystats_service_native}/include",
    "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//foundation/communication/bluetooth/services/bluetooth/common/",
    "//foundation/communication/wifi/wifi/utils/inc",
  ]
}

ohos_systemtest("batterystats_sys_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/batterystats_sys_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${ability_runtime_path}/frameworks/native/appkit:appkit_native",
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "battery_manager:batterysrv_client",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "display_manager:displaymgr",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hisysevent_native:libhisysevent",
    "hisysevent_native:libhisyseventmanager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:libaccountkits",
    "power_manager:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("systemtest_batterystats") {
  testonly = true
  deps = [ ":batterystats_sys_test" ]
}
