# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../batterystats.gni")

module_output_path = "battery_statistics/battery_statistics"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${batterystats_service_native}/include",
  ]
}

ohos_systemtest("batterystats_sys_test") {
  module_out_path = module_output_path

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/batterystats_sys_test.cpp",
  ]

  configs = [
    "${batterystats_service_path}:batterystats_public_config",
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
    "${batterystats_utils_path}:coverage_flags",
  ]

  deps = [
    "${batterystats_inner_api}:batterystats_client",
    "${batterystats_utils_path}:batterystats_utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:appkit_native",
    "battery_manager:batterysrv_client",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "display_manager:displaymgr",
    "googletest:gtest_main",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
    "ipc:ipc_core",
    "jsoncpp:jsoncpp",
    "os_account:libaccountkits",
    "power_manager:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  if (has_batterystats_bluetooth_part) {
    external_deps += [ "bluetooth:btframework" ]
  }
  if (has_batterystats_wifi_part) {
    external_deps += [ "wifi:wifi_sdk" ]
  }
  if (has_batterystats_call_manager_part) {
    external_deps += [ "call_manager:tel_call_manager_api" ]
  }
}

group("systemtest_batterystats") {
  testonly = true
  deps = [ ":batterystats_sys_test" ]
}
