# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")
import("//build/ohos.gni")

ohos_executable("statistics") {
  include_dirs = [
    "include",
    "//foundation/aafwk/standard/tools/aa/include",
    "${batterystats_interfaces_path}/include",
  ]

  sources = [
    "//foundation/aafwk/standard/tools/aa/src/shell_command.cpp",
    "src/main.cpp",
    "src/statistics_shell_command.cpp",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "//base/powermgr/battery_statistics/services:batterystats_service",
    "//utils/native/base:utils",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  configs = [
    "//foundation/aafwk/standard/tools/aa:ability_command_config",
    "//foundation/aafwk/standard/services/common:common_config",
    "${batterystats_utils_path}:batterystats_utils_config",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "battery_statistics_native"
}
