# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")
import("//build/ohos.gni")

ohos_executable("statistics") {
  include_dirs = [
    "include",
    "//foundation/ability/ability_runtime/tools/aa/include",
  ]

  sources = [
    "//foundation/ability/ability_runtime/tools/aa/src/shell_command.cpp",
    "src/main.cpp",
    "src/statistics_shell_command.cpp",
  ]

  deps = [ "${batterystats_innerkits}:batterystats_client" ]

  configs = [
    "//foundation/ability/ability_runtime/tools/aa:ability_command_config",
    "${ability_runtime_services_path}/common:common_config",
    "${batterystats_utils_path}:batterystats_utils_config",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  part_name = "battery_statistics"
}
