# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")

config("batterystatsnapi_private_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("batterystatistics") {
  sources = [
    "src/async_callback_info.cpp",
    "src/battery_stats.cpp",
    "src/battery_stats_module.cpp",
    "src/napi_error.cpp",
    "src/napi_utils.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":batterystatsnapi_private_config",
  ]

  deps = [
    "${batterystats_utils_path}:batterystats_utils",
    "//base/powermgr/battery_statistics/interfaces/innerkits:batterystats_client",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "powermgr"
  part_name = "${batterystats_part_name}"
}
