# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("../../../batterystats.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("DumpFuzzTest") {
  module_out_path = "battery_statistics/battery_statistics"
  
  fuzz_config_file = "${batterystats_root_path}/test/fuzztest/dump_fuzzer"

  include_dirs = [
    "./",
    "${batterystats_utils_path}:batterystats_utils_config",
    "${batterystats_utils_path}/native/include",
    "${batterystats_inner_api}/include",
  ]
  
  configs = [ "${batterystats_utils_path}:coverage_flags" ]
  
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  
  sources = [
    "dump_fuzzer.cpp",
  ]
  
  deps = [
    "${batterystats_inner_api}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
  ]
  
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DumpFuzzTest",
  ]
}
###############################################################################
