# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/test.gni")
import("../../../batterystats.gni")

module_output_path = "battery_statistics/battery_statistics"


##############################fuzztest##########################################
ohos_fuzztest("GetCountFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${batterystats_root_path}/test/fuzztest/getcount_fuzzer"

  include_dirs = [
    "./",
    "${batterystats_root_path}/utils/native/include",
    "${batterystats_root_path}/interfaces/inner_api/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  
  
   sources = [
     "./getcount_fuzzer.cpp",
   ]
  
  deps = [
    "${batterystats_root_path}/utils:batterystats_utils",
  ]

  external_deps = [
    "hilog:libhilog",
    "c_utils:utils",
  ]
}

# Add fuzztest group target for dependency resolution
group("fuzztest") {
  testonly = true
  deps = [ ":GetCountFuzzTest" ]
}